# Transcoder

./: CMakeLists.txt  build.sh  configure.sh
examples/: cli.cpp  example_1.cpp  example_2.cpp  gui.cpp  gui_main.cpp
include/private/: audio_decoder.hpp  audio_encoder.hpp  config_validator.hpp  decoder.hpp  encoder.hpp  frame_buffer.hpp  gpu_helper.hpp  input_souce.hpp  output_sink.hpp  pipeline_context.hpp  processing_stage.hpp  video_decoder.hpp  video_encoder.hpp
include/public/: transcoder.hpp
src/: audio_decoder.cpp  audio_encoder.cpp  config_validator.cpp  frame_buffer.cpp  input_souce.cpp  output_sink.cpp  perf_monitor.cpp  pipeline.cpp  utils.cpp  video_decoder.cpp  video_encoder.cpp
